base/demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
    service: demo
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      serviceAccountName: tekton-admin
      containers:
      - name: demo
        image: monopol/demo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
