base/demo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo  
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:    
  - http:
      paths:
      - path: /demo
        pathType: ImplementationSpecific
        backend:
          service:
            name: demo
            port:
              number: 8080
